kubernetes/manifests/grafana/grafana-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-kfirs-com-http
spec:
  entryPoints:
    - web
  routes:
    - match: HostRegexp(`grafana.kfirs.com`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
          namespace: traefik
      services:
        - kind: Service
          name: grafana
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-kfirs-com-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`grafana.kfirs.com`)
      kind: Rule
      services:
        - kind: Service
          name: grafana
          port: 80
  tls:
    secretName: grafana-kfirs-com-tls
